# stereo_calibraition_auto_git

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CMakeLists_cp.txt  Makefile  README.md  cmake_install.cmake  stereo_calibration_auto.files
data/: camera_L.yml  camera_R.yml  extrinsics.yml  intrinsics.yml
include/: camera_calibrate.h  stereo_calibration_func.h  stereo_rectify.h
output/: stereo_calibration_2016090316:26:20.txt  stereo_calibration_2016090317:28:56.txt  stereo_calibration_2016090509:42:31.txt  stereo_calibration_2016090510:22:09.txt  stereo_calibration_2016090513:58:39.txt  stereo_calibration_2016090514:00:06.txt  stereo_calibration_2016090514:03:05.txt  stereo_calibration_2016090817:51:12.txt
src/: CMakeLists.txt  CMakeLists.txt~  Makefile  camera_calibrate.cpp  cmake_install.cmake  stereo_calibration_auto.cpp  stereo_calibration_func.cpp  stereo_rectify.cpp  test_stereo_rectify.cpp
